# Automa---Claude

./: .env.example  .gitignore  ANALIZA_A_NAVRHY.md  CLAUDE.md  CODEBASE_ANALYSIS.md  README.md  README_RUN.md  WORKING_COMMANDS.md  docker-compose.prod.yml  docker-compose.yml  implementation-proposal.md  main.py  pyproject.toml  run.sh  scripts\1_3.py
.claude/: settings.local.json
backend/: .coverage  coverage.json  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: agents.py  credentials.py  health.py  jobs.py  monitoring.py  profile.py  scripts.py  websocket.py
backend/app/core/: audit.py  cache.py  deps.py  exceptions.py  retry.py  security.py  shutdown.py
backend/app/models/: __init__.py  agent.py  audit.py  credential.py  job.py  script.py  user.py
backend/app/schemas/: __init__.py  agent.py  credential.py  job.py  script.py  user.py
backend/app/services/: agent_service.py  auth_service.py  credential_service.py  encryption_service.py  job_service.py  monitoring_service.py  sandbox_service.py  scheduler_service.py  script_service.py
backend/tests/: conftest.py  test_api_agents.py  test_integration.py  test_service_layer.py  test_services.py
data/: automa.db
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.sandbox  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CredentialDialog.vue  CredentialTestDialog.vue  CredentialViewDialog.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  theme.js  websocket.js
scripts/: dev.py
(+12 files in other folders)
